# cuda-90days

./: .clangd  AGENTS.md  README.md
benchmarks/: README.md
benchmarks/configs/: README.md
configs/: README.md
days/: README.md
days/day001_vector_add_basics/: README.md
days/day002_cuda_sync_error_timing/: README.md
days/day003_cuda_error_checking/: README.md
days/day004_sglang_basics/: README.md
days/day005_global_memory_coalescing/: README.md
days/day006_shared_memory_basics/: README.md
days/day007_sglang_serving_workflow/: README.md
days/day008_shared_memory_bank_conflict/: README.md
days/day009_matrix_transpose_shared_memory/: README.md
days/day010_cuda_thread_hierarchy_basics/: README.md
days/day011_cuda_memory_basics/: README.md
days/day012_cuda_cpp_program_structure/: README.md
days/day013_vector_add_benchmark/: README.md
docs/: README.md  glossary.md
frameworks/: README.md
frameworks/candle/: README.md
frameworks/pytorch/: README.md
infra/cpp/: README.md
infra/linux/: README.md
infra/python/: README.md
infra/rust/: README.md
kernels/: README.md
kernels/cuda_cpp/matrix_transpose/: .gitignore  CMakeLists.txt  Makefile  transpose_bench.cu
kernels/cuda_cpp/vector_add_benchmark/: .gitignore  CMakeLists.txt  Makefile  vector_add_bench.cu
models/: README.md
models/deepseek/: README.md
reports/: README.md
runtime/: README.md
runtime/sglang/: README.md
scripts/: README.md
